# pulsation

./: .gitignore  CMakeLists.txt  README.md  filter.cpp  filter.h  http.h  main.cpp  server.cpp  server.h  worker.cpp  worker.h
static/: 404.html  50x.html  a.js  index.html
view/: dynamic.html
